--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
 </head>
 
 <body>
-	<header></header>
+	<header>
+            <!-- Navigationsmenu -->
+            <nav id="menu">
+                <a href="#nav-toggle" class="material-icons" id="closeNav">
+                    close
+                </a>
+                <a id="logo" href="/">
+                    <img  src="/images/logo-mette.png" />
+                </a>
+                <ul id="menuPunkter">
+                    <li>
+                        <a href="/about.html">
+                            About</a>
+                    </li>
+                    <li>
+                        <a href="/gallery.html">
+                            Gallery</a>
+                    </li>
+                    <li>
+                        <a href="/contact.html">
+                            Contact</a>
+                    </li>
+                     <li>
+                        <a href="/shop.html">
+                            Shop</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 	<main></main>
 	<footer></footer>
 	<script type="text/javascript" src=""></script>
