--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                     </li>
                 </ul>
             </nav>
+         <a href="#menu" class="material-icons" id="openNav">
+                menu
+            </a>
+          <a id="logoTop" href="/">
+                    <img  src="/images/logo-mette.png" />
+                </a>
         </header>
 	<main></main>
 	<footer></footer>
