--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,29 @@
                     <img  src="/images/logo-mette.png" />
                 </a>
         </header>
-	<main></main>
+	<main>
+    <h1 id="mig"> Contact</h1>
+        
+        <div class="container">
+  <form action="action_page.php">
+
+    <label for="fname"></label>
+    <input type="text" id="fname"placeholder="Name :">
+
+    <label for="lname"></label>
+    <input type="text" id="lname" placeholder="Email :">
+      
+      <label for="lname"></label>
+    <input type="text" id="lname" placeholder="Subject :"> 
+
+    <label for="Emne"></label>
+    <textarea id="Emne" n placeholder="Message" style="height:200px"></textarea>
+
+    <input type="Emne" value="Send">
+
+  </form>
+</div> 
+    </main>
 	<footer></footer>
 	<script type="text/javascript" src=""></script>
 </body>
