--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,13 @@
   </form>
 </div> 
     </main>
-	<footer></footer>
+	<footer>
+    <div class="footer">
+    <p>Costumer Servive</p>
+    <p>Returns</p>
+    <p>Contact</p>
+    </div>
+    </footer>
 	<script type="text/javascript" src=""></script>
 </body>
 
