--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <input type="text" id="lname" placeholder="Subject :"> 
 
     <label for="Emne"></label>
-    <textarea id="Emne" n placeholder="Message" style="height:200px"></textarea>
+    <textarea id="Emne" n placeholder="Message :" style="height:200px"></textarea>
 
     <input type="Emne" value="Send">
 
