--- a/about.html
+++ b/about.html
@@ -50,7 +50,13 @@
                 </a>
         </header>
 	<main></main>
-	<footer></footer>
+	<footer>
+    <div class="footer">
+    <p>Costumer Servive</p>
+    <p>Returns</p>
+    <p>Contact</p>
+    </div>
+    </footer>
 	<script type="text/javascript" src=""></script>
 </body>
 
