--- a/shop.html
+++ b/shop.html
@@ -49,7 +49,13 @@
                     <img  src="/images/logo-mette.png" />
                 </a>
         </header>
-	<main></main>
+	<main>
+    <div class="footer">
+    <p>Costumer Servive</p>
+    <p>Returns</p>
+    <p>Contact</p>
+    </div>
+    </main>
 	<footer></footer>
 	<script type="text/javascript" src=""></script>
 </body>
