--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,8 @@
                 </a>
         </header>
 	<main>
-    <h1 id="mig">Contact</h1>
+    <section id="indhold">
+        <h1 id="contact">Contact</h1>
         
         <div class="container">
   <form action="action_page.php">
@@ -71,6 +72,7 @@
 
   </form>
 </div> 
+        </section>
     </main>
 	<footer>
     <div class="footer">
