--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,9 @@
         </header>
 	<main>
     <section id="indhold">
-        <h1 id="contact">Contact</h1>
-        
-        <div class="container">
-  <form action="action_page.php">
+        <h1 id="contact">Contact</h1>    
+    
+  <form action="action_page.php" id="form">
 
     <label for="fname"></label>
     <input type="text" id="fname"placeholder="Name :">
@@ -68,10 +67,9 @@
     <label for="Emne"></label>
     <textarea id="Emne" n placeholder="Message :" style="height:200px"></textarea>
 
-    <input type="Emne" value="Send">
+    <button id="contactButton" type="submit">Send</button>
 
   </form>
-</div> 
         </section>
     </main>
 	<footer>
