--- a/shop.html
+++ b/shop.html
@@ -50,13 +50,14 @@
                 </a>
         </header>
 	<main>
-    <div class="footer">
+    <h1 id="contact">Shop</h1>   
+    </main>
+	<footer> <div class="footer">
     <p>Costumer Servive</p>
     <p>Returns</p>
     <p>Contact</p>
     </div>
-    </main>
-	<footer></footer>
+    </footer>
 	<script type="text/javascript" src=""></script>
 </body>
 
