--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,9 @@
                     <img  src="/images/logo-mette.png" />
                 </a>
         </header>
-	<main></main>
+	<main>
+    <h1 id="contact">Gallery</h1>   
+    </main>
 	<footer>
     <div class="footer">
     <p>Costumer Servive</p>
