--- a/index.html
+++ b/index.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html lang="da">
+    <head>
+        <meta charset="utf-8" />
+        <title>Mette Bjerg Studio</title>
+        <meta name="author" content="Diana, Mae og Sara" />
+        <meta name="description" content="Example description" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/style.css" />
+        <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-	<meta charset="utf-8">
-	<title>Mette Bjerg Studio</title>
-	<meta name="author" content="Diana, Mae og Sara">
-	<meta name="description" content="Example description">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/style.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
-</head>
-
-<body>
-	<header>
+    <body>
+        <header>
             <!-- Navigationsmenu -->
             <nav id="menu">
                 <a href="#nav-toggle" class="material-icons" id="closeNav">
                     close
                 </a>
                 <a id="logo" href="/">
-                    <img  src="/images/logo-mette.png" />
+                    <img src="/images/logo-mette.png" />
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/about.html">
-                            About</a>
+                        <a href="/about.html"> About</a>
                     </li>
                     <li>
-                        <a href="/gallery.html">
-                            Gallery</a>
+                        <a href="/gallery.html"> Gallery</a>
                     </li>
                     <li>
-                        <a href="/contact.html">
-                            Contact</a>
+                        <a href="/contact.html"> Contact</a>
                     </li>
-                     <li>
-                        <a href="/shop.html">
-                            Shop</a>
+                    <li>
+                        <a href="/shop.html"> Shop</a>
                     </li>
                 </ul>
             </nav>
-         <a href="#menu" class="material-icons" id="openNav">
+            <a href="#menu" class="material-icons" id="openNav">
                 menu
             </a>
-          <a id="logoTop" href="/">
-                    <img  src="/images/logo-mette.png" />
-                </a>
+            <a id="logoTop" href="/">
+                <img src="/images/logo-mette.png" />
+            </a>
         </header>
-	<main></main>
-	<footer></footer>
-	<script type="text/javascript" src=""></script>
-</body>
-
+        <main id="landingMain">
+            <section class="subpages">
+                <a href="/about.html">About</a>
+                <a href="/gallery.html" id="article2">Gallery</a>
+                <a href="/contact.html" id="article3">Contact</a>
+                <button id="contactButton" type="submit">Send</button>
+            </section>
+        </main>
+        <footer></footer>
+        <script type="text/javascript" src=""></script>
+    </body>
 </html>
