Landingpage and about

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
     <body>
-        <header>
+        <header id="landingHeader">
             <!-- Navigationsmenu -->
             <nav id="menu">
                 <a href="#nav-toggle" class="material-icons" id="closeNav">
@@ -54,10 +54,15 @@
                 <a href="/about.html">About</a>
                 <a href="/gallery.html" id="article2">Gallery</a>
                 <a href="/contact.html" id="article3">Contact</a>
-                <button id="contactButton" type="submit">Send</button>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer">
+                <p>Costumer Servive</p>
+                <p>Returns</p>
+                <p>Contact</p>
+            </div>
+        </footer>
         <script type="text/javascript" src=""></script>
     </body>
 </html>
