--- a/contact.html
+++ b/contact.html
@@ -74,9 +74,23 @@
     </main>
 	<footer>
     <div class="footer">
-    <p>Costumer Servive</p>
+    <div id="textfooter">
+    <p>Costumer Service</p>
     <p>Returns</p>
     <p>Contact</p>
+     </div>   
+    <div id="socialmedie">
+        <a class="icons" href="/">
+                    <img src="images/fb-black.png" />
+                </a>
+     <a class="icons" href="/">
+                    <img src="images/instagram.png" />
+                </a>
+     
+           <a class="icons" href="/">
+                    <img src="images/mail.png" />
+                </a>   
+        </div>
     </div>
     </footer>
 	<script type="text/javascript" src=""></script>
