--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                 </a>
      
            <a class="icons" href="/">
-                    <img src="images/mail.png" />
+                    <img src="images/E-mail.png" />
                 </a>   
         </div>
     </div>
