--- a/shop.html
+++ b/shop.html
@@ -53,9 +53,23 @@
     <h1 id="contact">Shop</h1>   
     </main>
 	<footer> <div class="footer">
-    <p>Costumer Servive</p>
+    <div id="textfooter">
+    <p>Costumer Service</p>
     <p>Returns</p>
     <p>Contact</p>
+     </div>   
+    <div id="socialmedie">
+        <a class="icons" href="/">
+                    <img src="images/fb-black.png" />
+                </a>
+     <a class="icons" href="/">
+                    <img src="images/instagram.png" />
+                </a>
+     
+           <a class="icons" href="/">
+                    <img src="images/E-mail.png" />
+                </a>   
+        </div>
     </div>
     </footer>
 	<script type="text/javascript" src=""></script>
