--- a/gallery.html
+++ b/gallery.html
@@ -50,13 +50,30 @@
                 </a>
         </header>
 	<main>
-    <h1 id="contact">Gallery</h1>   
+    <h1 id="contact">Gallery</h1>  
+    <img src="images/gallery1.JPG">
+    <img src="images/mobilForside.JPG">
+    <img src="images/gallery23.JPG">
     </main>
 	<footer>
     <div class="footer">
-    <p>Costumer Servive</p>
+    <div id="textfooter">
+    <p>Costumer Service</p>
     <p>Returns</p>
     <p>Contact</p>
+     </div>   
+    <div id="socialmedie">
+        <a class="icons" href="/">
+                    <img src="images/fb-black.png" />
+                </a>
+     <a class="icons" href="/">
+                    <img src="images/instagram.png" />
+                </a>
+     
+           <a class="icons" href="/">
+                    <img src="images/E-mail.png" />
+                </a>   
+        </div>
     </div>
     </footer>
 	<script type="text/javascript" src=""></script>
