--- a/index.html
+++ b/index.html
@@ -56,11 +56,26 @@
                 <a href="/contact.html" id="article3">Contact</a>
             </section>
         </main>
+
         <footer>
             <div class="footer">
-                <p>Costumer Servive</p>
-                <p>Returns</p>
-                <p>Contact</p>
+                <div id="textfooter">
+                    <p>Costumer Service</p>
+                    <p>Returns</p>
+                    <p>Contact</p>
+                </div>
+                <div id="socialmedie">
+                    <a class="icons" href="/">
+                        <img src="images/fb-black.png" />
+                    </a>
+                    <a class="icons" href="/">
+                        <img src="images/instagram.png" />
+                    </a>
+
+                    <a class="icons" href="/">
+                        <img src="images/E-mail.png" />
+                    </a>
+                </div>
             </div>
         </footer>
         <script type="text/javascript" src=""></script>
