--- a/about.html
+++ b/about.html
@@ -49,15 +49,63 @@
                 <img src="/images/logo-mette.png" />
             </a>
         </header>
-        <main>
-            <h1 id="contact">About</h1>
+        <main id="aboutMain">
             
+            <h1 id="contact">About</h1>
+            <div id="aboutBackground">
+            <div id="textAbout">
+                <p>
+                    Mette Bjerg Studio is an Aarhus based dress brand with focus
+                    on sustainability, durability and aesthetics.
+                </p>
+
+                <p>
+                    The dresses are inspired by the Danish summer and are
+                    carefully made with selected materials to create feminine,
+                    light and playful expressions. There exists a maximum of 5
+                    dresses of the same quality in order to give the user
+                    individuality.
+                </p>
+                <p>
+                    Each dress is handmade in Aarhus by Mette Bjerg, a young
+                    design student from VIA University College who specializes
+                    in sustainability.
+                </p>
+                <p>
+                    Mette Bjerg Studio's ambition is to create timeless, durable
+                    dresses that can be worn year after year, passed between
+                    friends and family, reinterpreted and re-styled to express
+                    the individuality of the user.
+                </p>
+                <p>
+                    The dresses are onesize and fit size 36-40 (small - large).
+                    They can be washed at 30 degrees and ironed at strength 1-2.
+                </p>
+                <p>
+                    Visit the Instagram profile @mettebjergstudio to see more.
+                </p>
+            </div>
+            </div>
         </main>
         <footer>
             <div class="footer">
-                <p>Costumer Servive</p>
-                <p>Returns</p>
-                <p>Contact</p>
+                <div id="textfooter">
+                    <p>Costumer Service</p>
+                    <p>Returns</p>
+                    <p>Contact</p>
+                </div>
+                <div id="socialmedie">
+                    <a class="icons" href="/">
+                        <img src="images/fb-black.png" />
+                    </a>
+                    <a class="icons" href="/">
+                        <img src="images/instagram.png" />
+                    </a>
+
+                    <a class="icons" href="/">
+                        <img src="images/E-mail.png" />
+                    </a>
+                </div>
             </div>
         </footer>
         <script type="text/javascript" src=""></script>
