--- a/gallery.html
+++ b/gallery.html
@@ -1,65 +1,78 @@
 <!DOCTYPE html>
 <html lang="da">
+    <head>
+        <meta charset="utf-8" />
+        <title>Mette Bjerg Studio</title>
+        <meta name="author" content="Diana, Mae og Sara" />
+        <meta name="description" content="Example description" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/style.css" />
+        <link
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-	<meta charset="utf-8">
-	<title>Mette Bjerg Studio</title>
-	<meta name="author" content="Diana, Mae og Sara">
-	<meta name="description" content="Example description">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/style.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
-</head>
-
-<body>
-		<header>
+    <body>
+        <header>
             <!-- Navigationsmenu -->
             <nav id="menu">
                 <a href="#nav-toggle" class="material-icons" id="closeNav">
                     close
                 </a>
                 <a id="logo" href="/">
-                    <img  src="/images/logo-mette.png" />
+                    <img src="/images/logo-mette.png" />
                 </a>
                 <ul id="menuPunkter">
                     <li>
-                        <a href="/about.html">
-                            About</a>
+                        <a href="/about.html"> About</a>
                     </li>
                     <li>
-                        <a href="/gallery.html">
-                            Gallery</a>
+                        <a href="/gallery.html"> Gallery</a>
                     </li>
                     <li>
-                        <a href="/contact.html">
-                            Contact</a>
+                        <a href="/contact.html"> Contact</a>
                     </li>
-                     <li>
-                        <a href="/shop.html">
-                            Shop</a>
+                    <li>
+                        <a href="/shop.html"> Shop</a>
                     </li>
                 </ul>
             </nav>
-         <a href="#menu" class="material-icons" id="openNav">
+            <a href="#menu" class="material-icons" id="openNav">
                 menu
             </a>
-          <a id="logoTop" href="/">
-                    <img  src="/images/logo-mette.png" />
-                </a>
+            <a id="logoTop" href="/">
+                <img src="/images/logo-mette.png" />
+            </a>
         </header>
-	<main>
-    <h1 id="contact">Gallery</h1>   
-    </main>
-	<footer>
-    <div class="footer">
-    <p>Costumer Servive</p>
-    <p>Returns</p>
-    <p>Contact</p>
-    </div>
-    </footer>
-	<script type="text/javascript" src=""></script>
-</body>
+        <main>
+            <h1 id="contact">Gallery</h1>
+        </main>
+        <footer>
+            <div class="footer">
+                <div id="textfooter">
+                    <p>Costumer Service</p>
+                    <p>Returns</p>
+                    <p>Contact</p>
+                </div>
+                <div id="socialmedie">
+                    <a class="icons" href="/">
+                        <img src="images/fb-black.png" />
+                    </a>
+                    <a class="icons" href="/">
+                        <img src="images/instagram.png" />
+                    </a>
 
+                    <a class="icons" href="/">
+                        <img src="images/E-mail.png" />
+                    </a>
+                </div>
+            </div>
+        </footer>
+        <script type="text/javascript" src=""></script>
+    </body>
 </html>
