--- a/gallery.html
+++ b/gallery.html
@@ -51,10 +51,14 @@
         </header>
 	<main>
     <h1 id="contact">Gallery</h1>  
-    <img src="images/gallery1.JPG">
+    
+    <div id="gallery">
     <img src="images/mobilForside.JPG">
-    <img src="images/gallery23.JPG">
+    <img src="images/gallery14.JPG">
+    <img src="images/gallery3.JPG">
+   </div>
     </main>
+    
 	<footer>
     <div class="footer">
     <div id="textfooter">
@@ -76,15 +80,6 @@
         </div>
     </div>
     </footer>
-	<script type="text/javascript" src=""></script>
-</body>
-
-                    <a class="icons" href="/">
-                        <img src="images/E-mail.png" />
-                    </a>
-                </div>
-            </div>
-        </footer>
         <script type="text/javascript" src=""></script>
     </body>
 </html>
