Auto stash before merge of "master" and "origin/master"

--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="/gallery.html"> Gallery</a>
                     </li>
+                    <a id="logoTopDesktop" href="/">
+                        <img src="/images/logo-mette.png" />
+                    </a>
                     <li>
                         <a href="/contact.html"> Contact</a>
                     </li>
@@ -50,41 +53,42 @@
             </a>
         </header>
         <main id="aboutMain">
-            
             <h1 id="contact">About</h1>
             <div id="aboutBackground">
-            <div id="textAbout">
-                <p>
-                    Mette Bjerg Studio is an Aarhus based dress brand with focus
-                    on sustainability, durability and aesthetics.
-                </p>
+                <div id="textAbout">
+                    <p>
+                        Mette Bjerg Studio is an Aarhus based dress brand with
+                        focus on sustainability, durability and aesthetics.
+                    </p>
 
-                <p>
-                    The dresses are inspired by the Danish summer and are
-                    carefully made with selected materials to create feminine,
-                    light and playful expressions. There exists a maximum of 5
-                    dresses of the same quality in order to give the user
-                    individuality.
-                </p>
-                <p>
-                    Each dress is handmade in Aarhus by Mette Bjerg, a young
-                    design student from VIA University College who specializes
-                    in sustainability.
-                </p>
-                <p>
-                    Mette Bjerg Studio's ambition is to create timeless, durable
-                    dresses that can be worn year after year, passed between
-                    friends and family, reinterpreted and re-styled to express
-                    the individuality of the user.
-                </p>
-                <p>
-                    The dresses are onesize and fit size 36-40 (small - large).
-                    They can be washed at 30 degrees and ironed at strength 1-2.
-                </p>
-                <p>
-                    Visit the Instagram profile @mettebjergstudio to see more.
-                </p>
-            </div>
+                    <p>
+                        The dresses are inspired by the Danish summer and are
+                        carefully made with selected materials to create
+                        feminine, light and playful expressions. There exists a
+                        maximum of 5 dresses of the same quality in order to
+                        give the user individuality.
+                    </p>
+                    <p>
+                        Each dress is handmade in Aarhus by Mette Bjerg, a young
+                        design student from VIA University College who
+                        specializes in sustainability.
+                    </p>
+                    <p>
+                        Mette Bjerg Studio's ambition is to create timeless,
+                        durable dresses that can be worn year after year, passed
+                        between friends and family, reinterpreted and re-styled
+                        to express the individuality of the user.
+                    </p>
+                    <p>
+                        The dresses are onesize and fit size 36-40 (small -
+                        large). They can be washed at 30 degrees and ironed at
+                        strength 1-2.
+                    </p>
+                    <p>
+                        Visit the Instagram profile @mettebjergstudio to see
+                        more.
+                    </p>
+                </div>
             </div>
         </main>
         <footer>
