--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="/gallery.html"> Gallery</a>
                     </li>
+                    <a id="logoTopDesktop" href="/">
+                        <img src="/images/logo-mette.png" />
+                    </a>
                     <li>
                         <a href="/contact.html"> Contact</a>
                     </li>
