--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="/gallery.html"> Gallery</a>
                     </li>
+                    <a id="logoTopDesktop" href="/">
+                        <img src="/images/logo-mette.png" />
+                    </a>
                     <li>
                         <a href="/contact.html"> Contact</a>
                     </li>
@@ -50,10 +53,21 @@
             </a>
         </header>
         <main id="landingMain">
-            <section class="subpages">
+            <section class="subpages mobil">
                 <a href="/about.html">About</a>
                 <a href="/gallery.html" id="article2">Gallery</a>
                 <a href="/contact.html" id="article3">Contact</a>
+            </section>
+            <section class="subpages desktop">
+                <div class="landing-link-desktop">
+                    <a href="/about.html">About</a>
+                </div>
+                <div class="landing-link-desktop">
+                    <a href="/gallery.html" id="article2">Gallery</a>
+                </div>
+                <div class="landing-link-desktop">
+                    <a href="/contact.html" id="article3">Contact</a>
+                </div>
             </section>
         </main>
 
