--- a/gallery.html
+++ b/gallery.html
@@ -52,14 +52,28 @@
                 <img src="/images/logo-mette.png" />
             </a>
         </header>
-        <main>
+        <main id="galleryMain">
             <h1 id="contact">Gallery</h1>
-
-            <div id="gallery">
+<div class="gallery">
+            <div id="gallery1">
                 <img src="images/gallery1.JPG" />
                 <img src="images/mobilForside.JPG" />
                 <img src="images/gallery3.JPG" />
             </div>
+
+             <div id="gallery2">
+                <img src="images/gallery1.JPG" />
+                <img src="images/mobilForside.JPG" />
+                <img src="images/gallery3.JPG" />
+            </div>
+        
+             <div id="gallery3">
+                <img src="images/gallery1.JPG" />
+                <img src="images/mobilForside.JPG" />
+                <img src="images/gallery3.JPG" />
+            </div>
+    </div>
+           
         </main>
 
         <footer>
