--- a/about.html
+++ b/about.html
@@ -55,6 +55,9 @@
         <main id="aboutMain">
             <h1 id="contact">About</h1>
             <div id="aboutBackground">
+                
+                <img id="aboutImage" src="/images/about.JPG" />
+                
                 <div id="textAbout">
                     <p>
                         Mette Bjerg Studio is an Aarhus based dress brand with
