--- a/index.html
+++ b/index.html
@@ -53,19 +53,14 @@
             </a>
         </header>
         <main id="landingMain">
-            <section class="subpages mobil">
-                <a href="/about.html">About</a>
-                <a href="/gallery.html" id="article2">Gallery</a>
-                <a href="/contact.html" id="article3">Contact</a>
-            </section>
-            <section class="subpages desktop">
-                <div class="landing-link-desktop">
+            <section class="subpages">
+                <div class="subpage" id="landing1">
                     <a href="/about.html">About</a>
                 </div>
-                <div class="landing-link-desktop">
+                <div class="subpage" id="landing2">
                     <a href="/gallery.html" id="article2">Gallery</a>
                 </div>
-                <div class="landing-link-desktop">
+                <div class="subpage" id="landing3">
                     <a href="/contact.html" id="article3">Contact</a>
                 </div>
             </section>
