--- a/contact.html
+++ b/contact.html
@@ -87,10 +87,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/fb-black.png" />
+                        <img src="images/fb-black.svg" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.png" />
+                        <img src="images/instagram.svg" />
                     </a>
 
                     <a class="icons" href="/">
