--- a/gallery.html
+++ b/gallery.html
@@ -54,27 +54,28 @@
         </header>
         <main id="galleryMain">
             <h1 id="contact">Gallery</h1>
-<div class="gallery">
-            <div id="gallery2">
-                <img src="images/gallery11.JPG" />
-                <img src="images/gallery12.JPG" />
-                <img src="images/about.JPG" />
-                <img src="images/gallery14.JPG">
-            </div>
+            <div class="gallery">
+                <div id="gallery2">
+                    <img src="images/gallery11.JPG" />
+                    <img src="images/gallery12.JPG" />
+                    <img src="images/about.JPG" />
+                    <img src="images/gallery14.JPG" />
+                </div>
 
-             <div id="gallery1">
-                <img src="images/gallery1.JPG" />
-                <img src="images/mobilForside.JPG" />
-                <img src="images/gallery3.JPG" />
+                <div id="gallery1">
+                    <img src="images/gallery1.JPG" />
+                    <img src="images/mobilForside.JPG" />
+                    <img src="images/gallery3.JPG" />
+                </div>
+
+                <div id="gallery3">
+                    <img
+                        src="images/F731118E-3862-43AA-AE51-A9CECEE94749.JPG"
+                    />
+                    <img src="images/shop.JPG" />
+                    <img src="images/gallery23.JPG" />
+                </div>
             </div>
-        
-             <div id="gallery3">
-                <img src="images/F731118E-3862-43AA-AE51-A9CECEE94749.JPG" />
-                <img src="images/shop.JPG" />
-                <img src="images/gallery23.JPG" />
-            </div>
-    </div>
-           
         </main>
 
         <footer>
@@ -86,10 +87,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/fb-black.png" />
+                        <img src="images/fb-black.svg" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.png" />
+                        <img src="images/instagram.svg" />
                     </a>
 
                     <a class="icons" href="/">
