--- a/about.html
+++ b/about.html
@@ -55,9 +55,8 @@
         <main id="aboutMain">
             <h1 id="contact">About</h1>
             <div id="aboutBackground">
-                
                 <img id="aboutImage" src="/images/about.JPG" />
-                
+
                 <div id="textAbout">
                     <p>
                         Mette Bjerg Studio is an Aarhus based dress brand with
@@ -103,10 +102,10 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/fb-black.png" />
+                        <img src="images/fb-black.svg" />
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.png" />
+                        <img src="images/instagram.svg" />
                     </a>
 
                     <a class="icons" href="/">
