--- a/shop.html
+++ b/shop.html
@@ -52,12 +52,14 @@
                 <img src="/images/logo-mette.png" />
             </a>
         </header>
-        <main id="shopmain">
+            <main id="shopmain">
+                
             <h1 id="contact">Shop</h1>
             <div id="shopbaggrund">
-                <div id="div2">
+                <img id="shopImage" src="/images/shop.JPG" />
+            <div id="div2">
+                
                     <p>We are working on our online shop.</p>
-
                     <p>In the meantime you are more than welcome to:</p>
 
                     <a id="contactbottom" href="/contact.html">
