--- a/shop.html
+++ b/shop.html
@@ -2,9 +2,9 @@
 <html lang="da">
     <head>
         <meta charset="utf-8" />
-        <title>Mette Bjerg Studio</title>
+        <title>Mette Bjerg Studio - Shop</title>
         <meta name="author" content="Diana, Mae og Sara" />
-        <meta name="description" content="Example description" />
+        <meta name="description" content="Shop. Mette Bjerg Studio. Independent dress designer from Aarhus. Makes custom made dresses to order"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/style.css" />
         <link
@@ -25,7 +25,7 @@
                     close
                 </a>
                 <a id="logo" href="/">
-                    <img src="/images/logo-mette.png" />
+                    <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
                 </a>
                 <ul id="menuPunkter">
                     <li>
@@ -35,7 +35,7 @@
                         <a href="/gallery.html"> Gallery</a>
                     </li>
                     <a id="logoTopDesktop" href="/">
-                        <img src="/images/logo-mette.png" />
+                        <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
                     </a>
                     <li>
                         <a href="/contact.html"> Contact</a>
@@ -49,14 +49,14 @@
                 menu
             </a>
             <a id="logoTop" href="/">
-                <img src="/images/logo-mette.png" />
+                <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
             </a>
         </header>
             <main id="shopmain">
                 
             <h1 id="contact">Shop</h1>
             <div id="shopbaggrund">
-                <img id="shopImage" src="/images/shop.JPG" />
+                <img id="shopImage" src="/images/shop.JPG" alt="Mette Bjerg Studio Shop"/>
             <div id="div2">
                 
                     <p>We are working on our online shop.</p>
@@ -76,15 +76,15 @@
                     <p>Contact</p>
                 </div>
                 <div id="socialmedie">
-                    <a class="icons" href="/">
-                        <img src="images/fb-black.svg" />
+                  <a class="icons" href="/">
+                        <img src="images/fb-black.svg" alt="fb"/>
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.svg" />
+                        <img src="images/instagram.svg" alt="instagram" />
                     </a>
 
                     <a class="icons" href="/">
-                        <img src="images/E-mail.png" />
+                        <img src="images/E-mail.png" alt="e-mail"/>
                     </a>
                 </div>
             </div>
