--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Mette Bjerg Studio</title>
         <meta name="author" content="Diana, Mae og Sara" />
-        <meta name="description" content="Example description" />
+        <meta name="description" content="Mette Bjerg Studio. Independent dress designer from Aarhus. Makes custom made dresses to order"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/style.css" />
         <link
@@ -25,7 +25,7 @@
                     close
                 </a>
                 <a id="logo" href="/">
-                    <img src="/images/logo-mette.png" />
+                    <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
                 </a>
                 <ul id="menuPunkter">
                     <li>
@@ -49,7 +49,7 @@
                 menu
             </a>
             <a id="logoTop" href="/">
-                <img src="/images/logo-mette.png" />
+                <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
             </a>
         </header>
         <main id="landingMain">
@@ -74,15 +74,15 @@
                     <p>Contact</p>
                 </div>
                 <div id="socialmedie">
-                    <a class="icons" href="/">
-                        <img src="images/fb-black.svg" />
+                  <a class="icons" href="/">
+                        <img src="images/fb-black.svg" alt="fb"/>
                     </a>
                     <a class="icons" href="/">
-                        <img src="images/instagram.svg" />
+                        <img src="images/instagram.svg" alt="instagram" />
                     </a>
 
                     <a class="icons" href="/">
-                        <img src="images/E-mail.png" />
+                        <img src="images/E-mail.png" alt="e-mail"/>
                     </a>
                 </div>
             </div>
