Rettelse af css til git

--- a/about.html
+++ b/about.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8" />
         <title>Mette Bjerg Studio - About</title>
         <meta name="author" content="Diana, Mae og Sara" />
-        <meta name="description" content="About. Mette Bjerg Studio. Independent dress designer from Aarhus. Makes custom made dresses to order"/>
+        <meta
+            name="description"
+            content="About. Mette Bjerg Studio. Independent dress designer from Aarhus. Makes custom made dresses to order"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <link
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
@@ -25,7 +28,10 @@
                     close
                 </a>
                 <a id="logo" href="/">
-                    <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
+                    <img
+                        src="/images/logo-mette.png"
+                        alt="Mette Bjerg Studio Logo"
+                    />
                 </a>
                 <ul id="menuPunkter">
                     <li>
@@ -49,13 +55,20 @@
                 menu
             </a>
             <a id="logoTop" href="/">
-                <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
+                <img
+                    src="/images/logo-mette.png"
+                    alt="Mette Bjerg Studio Logo"
+                />
             </a>
         </header>
         <main id="aboutMain">
             <h1 id="contact">About</h1>
             <div id="aboutBackground">
-                <img id="aboutImage" src="/images/about.JPG" alt="Mette Bjerg Studio About"/>
+                <img
+                    id="aboutImage"
+                    src="/images/about.JPG"
+                    alt="Mette Bjerg Studio About"
+                />
 
                 <div id="textAbout">
                     <p>
@@ -102,14 +115,14 @@
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
-                        <img src="images/fb-black.svg" alt="fb"/>
+                        <img src="images/fb-black.svg" alt="fb" />
                     </a>
                     <a class="icons" href="/">
                         <img src="images/instagram.svg" alt="instagram" />
                     </a>
 
                     <a class="icons" href="/">
-                        <img src="images/E-mail.png" alt="e-mail"/>
+                        <img src="images/E-mail.png" alt="e-mail" />
                     </a>
                 </div>
             </div>
