--- a/shop.html
+++ b/shop.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8" />
         <title>Mette Bjerg Studio - Shop</title>
         <meta name="author" content="Diana, Mae og Sara" />
-        <meta name="description" content="Shop. Mette Bjerg Studio. Independent dress designer from Aarhus. Makes custom made dresses to order"/>
+        <meta
+            name="description"
+            content="Shop. Mette Bjerg Studio. Independent dress designer from Aarhus. Makes custom made dresses to order"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <link
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
@@ -25,7 +28,10 @@
                     close
                 </a>
                 <a id="logo" href="/">
-                    <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
+                    <img
+                        src="/images/logo-mette.png"
+                        alt="Mette Bjerg Studio Logo"
+                    />
                 </a>
                 <ul id="menuPunkter">
                     <li>
@@ -35,7 +41,10 @@
                         <a href="/gallery.html"> Gallery</a>
                     </li>
                     <a id="logoTopDesktop" href="/">
-                        <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
+                        <img
+                            src="/images/logo-mette.png"
+                            alt="Mette Bjerg Studio Logo"
+                        />
                     </a>
                     <li>
                         <a href="/contact.html"> Contact</a>
@@ -49,16 +58,21 @@
                 menu
             </a>
             <a id="logoTop" href="/">
-                <img src="/images/logo-mette.png" alt="Mette Bjerg Studio Logo"/>
+                <img
+                    src="/images/logo-mette.png"
+                    alt="Mette Bjerg Studio Logo"
+                />
             </a>
         </header>
-            <main id="shopmain">
-                
+        <main id="shopmain">
             <h1 id="contact">Shop</h1>
             <div id="shopbaggrund">
-                <img id="shopImage" src="/images/shop.JPG" alt="Mette Bjerg Studio Shop"/>
-            <div id="div2">
-                
+                <img
+                    id="shopImage"
+                    src="/images/shop.JPG"
+                    alt="Mette Bjerg Studio Shop"
+                />
+                <div id="div2">
                     <p>We are working on our online shop.</p>
                     <p>In the meantime you are more than welcome to:</p>
 
@@ -76,15 +90,15 @@
                     <p>Contact</p>
                 </div>
                 <div id="socialmedie">
-                  <a class="icons" href="/">
-                        <img src="images/fb-black.svg" alt="fb"/>
+                    <a class="icons" href="/">
+                        <img src="images/fb-black.svg" alt="fb" />
                     </a>
                     <a class="icons" href="/">
                         <img src="images/instagram.svg" alt="instagram" />
                     </a>
 
                     <a class="icons" href="/">
-                        <img src="images/E-mail.png" alt="e-mail"/>
+                        <img src="images/E-mail.png" alt="e-mail" />
                     </a>
                 </div>
             </div>
