rettet fra validering

--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
                     <li>
                         <a href="/gallery.html"> Gallery</a>
                     </li>
-                    <a id="logoTopDesktop" href="/">
-                        <img src="/images/logo-mette.png" />
-                    </a>
+                    <li>
+                        <a id="logoTopDesktop" href="/">
+                            <img
+                                src="/images/logo-mette.png"
+                                alt="Mette Bjerg Studio Logo"
+                            />
+                        </a>
+                    </li>
                     <li>
                         <a href="/contact.html"> Contact</a>
                     </li>
@@ -96,6 +101,5 @@
                 </div>
             </div>
         </footer>
-        <script type="text/javascript" src=""></script>
     </body>
 </html>
