rettelse af valideringsfejl

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
                     <li>
                         <a href="/gallery.html"> Gallery</a>
                     </li>
-                    <li>
-                        <a id="logoTopDesktop" href="/">
+                    <li id="logoTopDesktop">
+                        <a href="/">
                             <img
                                 src="/images/logo-mette.png"
                                 alt="Mette Bjerg Studio Logo"
