--- a/gallery.html
+++ b/gallery.html
@@ -70,24 +70,24 @@
             <h1 id="contact">Gallery</h1>
             <div class="gallery">
                 <div id="gallery2">
-                    <img src="images/gallery11.JPG" />
-                    <img src="images/gallery12.JPG" />
-                    <img src="images/about.JPG" />
-                    <img src="images/gallery14.JPG" />
+                    <img src="images/gallery11.JPG" alt="Mette Bjerg Studio"/>
+                    <img src="images/gallery12.JPG" alt="Mette Bjerg Studio"/>
+                    <img src="images/about.JPG" alt="Mette Bjerg Studio"/>
+                    <img src="images/gallery14.JPG" alt="Mette Bjerg Studio"/>
                 </div>
 
                 <div id="gallery1">
-                    <img src="images/gallery1.JPG" />
-                    <img src="images/mobilForside.JPG" />
-                    <img src="images/gallery3.JPG" />
+                    <img src="images/gallery1.JPG" alt="Mette Bjerg Studio"/>
+                    <img src="images/mobilForside.JPG" alt="Mette Bjerg Studio"/>
+                    <img src="images/gallery3.JPG" alt="Mette Bjerg Studio"/>
                 </div>
 
                 <div id="gallery3">
                     <img
-                        src="images/F731118E-3862-43AA-AE51-A9CECEE94749.JPG"
+                        src="images/F731118E-3862-43AA-AE51-A9CECEE94749.JPG" alt="Mette Bjerg Studio"
                     />
-                    <img src="images/shop.JPG" />
-                    <img src="images/gallery23.JPG" />
+                    <img src="images/shop.JPG" alt="Mette Bjerg Studio"/>
+                    <img src="images/gallery23.JPG" alt="Mette Bjerg Studio"/>
                 </div>
             </div>
         </main>
