--- a/contact.html
+++ b/contact.html
@@ -71,19 +71,18 @@
                 <h1 id="contact">Contact</h1>
 
                 <form action="action_page.php" id="form">
-                    <label for="fname"></label>
-                    <input type="text" id="fname" placeholder="Name :" />
+                    <label for="Name"></label>
+                    <input type="text" id="Name" placeholder="Name :" />
 
-                    <label for="lname"></label>
-                    <input type="text" id="lname" placeholder="Email :" />
+                    <label for="Email"></label>
+                    <input type="text" id="Email" placeholder="Email :" />
 
-                    <label for="lname"></label>
-                    <input type="text" id="lname" placeholder="Subject :" />
+                    <label for="Subject"></label>
+                    <input type="text" id="Subject" placeholder="Subject :" />
 
                     <label for="Emne"></label>
                     <textarea
                         id="Emne"
-                        n
                         placeholder="Message :"
                         style="height:200px"
                     ></textarea>
