All rights deserved

--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,7 @@
                     <p>Costumer Service</p>
                     <p>Returns</p>
                     <p>Contact</p>
+                    <p> &#169; 2020. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
