--- a/gallery.html
+++ b/gallery.html
@@ -98,6 +98,7 @@
                     <p>Costumer Service</p>
                     <p>Returns</p>
                     <p>Contact</p>
+                    <p> &#169; 2020. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
