--- a/shop.html
+++ b/shop.html
@@ -90,6 +90,7 @@
                     <p>Costumer Service</p>
                     <p>Returns</p>
                     <p>Contact</p>
+                    <p> &#169; 2020. All rights deserverd.</p>  
                 </div>
                 <div id="socialmedie">
                     <a class="icons" href="/">
